# optics_raytracer

./: .gitignore  README.md  aider.sh  example_config.json  pyproject.toml
docs/: ui_naming_proposals.md
examples/: example_config.json  microscope.json  simple_test.py  simple_test_with_dict.py  telescope.json  test_with_eye_camera.py
examples/scenarios/astronomical_telescope/: astronomical_telescope.json
examples/scenarios/compound_microscope/: compound_microscope.json
examples/scenarios/eye_like_camera/: test_with_eye_camera.json  test_with_eye_camera.py
examples/scenarios/microscope/: microscope.json  microscope_scene.mtl
examples/scenarios/prismatic_effect/: prismatic_effect.json  prismatic_effect_scene.mtl
examples/scenarios/telescope/: telescope.json  telescope_scene.mtl
examples/scripts/: all.sh  eye_camera.sh  generate_links.py  microscope.sh  telescope.sh
experiments/: 2_lenses_gif.py  close_negative.py  lens_comparison_test.py  moving_lens_in_center.py
experiments/2025/05/: changing_eye_lens_distance.py  configuring_object_distance_at_focus.py  eye_camera_gif_changing_lens.py
experiments/2025/prev/: 2_lenses_gif.py  close_negative.py  moving_lens_in_center.py
experiments/creating_images/: get_target.py
src/optics_raytracer/: __init__.py  camera.py  circle.py  cli.py  color_tracer.py  colored_object.py  engine.py  export_3d.py  gif_builder.py  group_namer.py  image_save.py  image_saver.py  inserted_image.py  lens.py  pixelated_viewport.py  primitives.py  ray.py  ray_group_namer.py  rectangle.py  simple_camera.py  size.py  surface.py  vec3.py
src/optics_raytracer/camera/: __init__.py  camera.py  (+1 more)
(+17 files in other folders)
