[project]
name = "optics-raytracer"
version = "0.1.0"
description = "A 3D optics raytracer for simulating thin lenses and image projection, with OBJ export capabilities"
readme = "README.md"
authors = [
    { name = "KoStard", email = "ruben.kostard@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "torch>=2.6.0",
]

[project.scripts]
optics-raytracer = "optics_raytracer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]